test/type/wrong/div3.kk.out
test/type/wrong/div3.kk(1, 5): error: value definition is recursive.
 recursive group: [type/wrong/div3/recursive,type/wrong/div3/wrong]